# CQL

./: .gitignore  CQL.py  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  python-app.yml  test.yml  testpypi-publish.yml
parser/: CQL.py  functions.py  parse.py  parser.py  test.py
src/: CQL.py
src/CQLEngine/: CQL.py  engine.py  functions.py  lexer.py  parser.py
src/corpus_query_language/: engine.py  functions.py  parser.py
src/corpus_query_language/core/: core.py
src/corpus_query_language/engine/: engine.py
src/corpus_query_language/functions/: functions.py
src/corpus_query_language/language/: parser.py
test_data/: test_corpus.tsv
tests/: queries_match.txt  test_corpus.json  tests.py
